--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
 {% block content %}
 <h1 class="text-primary text-center mb-4">Data cleaning attempt</h1>
 <div class="text-center d-grid gap-3 col-6 mx-auto">
-     <a href="/raw" class="btn btn-outline-secondary">View Raw Netflix Data</a>
+     <a href="/raw" class="btn btn-outline-primary">View Raw Netflix Data</a>
     <a href="/data" class="btn btn-outline-primary">View Cleaned Netflix Data</a>
+    <a href="/plots" class="btn btn-outline-primary">Analysis of Data Sets</a>
 </div>
 {% endblock %}
 
